force-app/main/default/objects/Positions__c/fields/Function_Area__c.field-meta.xml
<CustomField>
    <fullName>Function_Area__c</fullName>
    <label>Function Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Human resources</fullName>
            </value>
            <value>
                <fullName>Information technology</fullName>
            </value>
            <value>
                <fullName>Misscellaneous</fullName>
            </value>
            <value>
                <fullName>Retail Operations</fullName>
            </value>
            <value>
                <fullName>Warehousing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>