force-app/main/default/objects/Positions__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boston, MA</fullName>
            </value>
            <value>
                <fullName>Dallas, CA</fullName>
            </value>
            <value>
                <fullName>Gulfport, MS</fullName>
            </value>
            <value>
                <fullName>San Francisco, CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>