force-app/main/default/objects/Positions__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Position</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Open-Approved</fullName>
            </value>
            <value>
                <fullName>Closed-Filled</fullName>
            </value>
            <value>
                <fullName>Closed-Not Approved</fullName>
            </value>
            <value>
                <fullName>Closed-Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>