force-app/main/default/objects/Positions__c/recordTypes/position.recordType-meta.xml
<RecordType>
    <fullName>position</fullName>
    <active>true</active>
    <label>position</label>
</RecordType>