force-app/main/default/objects/Positions__c/validationRules/Closed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Closed-Filled&quot;) || ISPICKVAL( Status__c , &quot;Closed-Not Approved&quot;)&amp;&amp; ISBLANK( Closed_date__c )</errorConditionFormula>
    <errorDisplayField>Closed_date__c</errorDisplayField>
    <errorMessage>Closed date should not be blank</errorMessage>
</ValidationRule>