force-app/main/default/objects/Positions__c/validationRules/Min_Pay_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Pay_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
    <errorMessage>Max Pay should be greater than Min Pay</errorMessage>
</ValidationRule>